# smart-roll

./: .gitignore  LICENSE  README.md  attendance_batch.py  attendance_pipeline.py  build_embeddings.py  database_config.py  fetch_embeddings_artifact.py  main.py  makefile  publish_embeddings_artifact.py  pyproject.toml  students.json  threshold_tuning.py
backend/: requirements.txt  test.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: attendance.py  course.py  student.py  token.py  user.py
backend/app/routers/: admin.py  auth.py  student.py  ta.py  teacher.py
backend/app/services/: attendance_service.py  auth_service.py  recommendation_service.py
backend/app/utils/: face_embedding.py  image_processing.py
database/: SQL_functions.sql  initial_schema.sql  rls_policies.sql
frontend/: dashboard_admin.html  dashboard_student.html  dashboard_ta.html  dashboard_teacher.html  index.html
frontend/css/: style.css
frontend/js/: admin.js  auth.js  main.js  student.js  ta.js  teacher.js
models/: app.py  arcface_recognizer.py  complete_face_detection.py  evaluate.py  face_detection.py  haar_detector.py  mtcnn_detector.py  requirements.txt  run_detection.py  single_image_demo.py  webhook_server.py
models/validation_data/: enrollment.json
static/: index.html
utils/: wandb_artifacts.py
